[package]
name = "xrutes"
version = "0.1.0"
edition = "2021"
authors = ["dowell <dowell@funxdata.com>"]
description = "Routing and event handling"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/funxdata/xrutes.git"
keywords = ["rout", "funxdata"] # 推荐
categories = ["web-programming","gui"] 

[dependencies]
http = "1.3.1"
serde = "1.0.164"
serde_json = "1.0.99"
serde_derive = "1.0.164"